# Zytherion-Blockchain

./: .gitignore  README.md  build_and_test.bat  build_and_test.sh
ai-validator/: features.py  model.py  requirements.txt  server.py  training.py
ci/: buiild-test.yaml
core/: Cargo.toml  build.rs
core/src/: block.rs  contract_engine.rs  crypto.rs  lib.rs  main.rs  pos.rs  pow.rs  state.rs
deploy/: Dockerfile.ai  Dockerfile.node  build-and-run.bat  config.yaml  docker-compose.yml  genesis.json  setup-test.bat
deploy/block-logs/: block_validations.jsonl
docs/: protocol_spec.md  tokenomics.md  whitepaper.md
node/: go.mod  go.sum  main.go
node/cli/: command.go
node/p2p/: network.go
node/rpc/: handlers.go
node/staking/: validator.go
